--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,23 +4,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Using Flatpickr</title>
+  <title>Doctor-R-US</title>
   <!--  Flatpicker Styles  -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.2.3/flatpickr.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.2.3/themes/dark.css">
-  <link rel="stylesheet" href="/public/css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-  <img src="https://chmln.github.io/flatpickr/images/logo.png" alt="flatpickr">
-  <h1>Flatpickr</h1>
+  <img src="/photos/types-of-doctors-1600114658.jpg" alt="Welcome">
+  <h1>Doctor-R-US</h1>
   <hr>
   {{{body}}}
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!--  Flatpickr  -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.2.3/flatpickr.js"></script>
-  <script src="../../public/js/homepage.js"></script>
+  <script src="/js/homepage.js"></script>
 </body>
 
 </html>
