--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -1,7 +1,7 @@
 <body>
     <form name="my">
-        <input name="one" value="New">
-        <input name="two" value="Existing">
+        <input name="one" value="Male">
+        <input name="two" value="Female">
         <input type="radio" name="age" value="10">
         <input type="radio" name="age" value="20">
         <fieldset name="userFields">
@@ -9,15 +9,18 @@
             <input name="login" type="text">
         </fieldset>
         <select id="select">
-            <option value="apple">Doctor</option>
-            <option value="pear">Nurse</option>
-            <option value="banana">Management</option>
+            <option value="doctor">Doctor</option>
+            <option value="nurse">Nurse</option>
+            <option value="employee">Management</option>
         </select>
 
         <select id="select" multiple>
-            <option value="blues" selected>Blues</option>
-            <option value="rock" selected>Rock</option>
-            <option value="classic">Classic</option>
+            <option value="dentist" selected>Dentist</option>
+            <option value="cardiologist" selected>Cardiologist</option>
+            <option value="nuerosurgoen">Nuerosurgoen</option>
+            <option value="hr" selected>HR</option>
+            <option value="nurse" selected>Nurse</option>
+            <option value="ultratech">Ultrasound-tech</option>
         </select>
     </form>
 
