--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,12 +1,12 @@
 <div>
-  <h2>Basic DateTime</h2>
+  <h2>Create Appointment</h2>
   <input type="text" id="basicDate" placeholder="Please select Date Time" data-input>
-
-  <h2>Time Picker</h2>
-  <input type="text" id="timePicker" placeholder="Please select Time">
+  <button id="confirmBtn" type="submit"class="btn btn-danger w-50 custom-b1">Confirm</button>
 </div>
 <h2>Week Number with Reset Date</h2>
 <div class=resetDate>
   <input type="text" placeholder="Select Date.." data-input>
   <button class="input-button" title="clear" data-clear>RESET</button>
 </div>
+
+<script src="/js/homepage.js"></script>
