--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,17 +1,58 @@
-<h2>Login</h2>
+<div class="row">
+  <div class="col-md-6">
+    <h2>Login</h2>
 
-<form class="form login-form">
-  <div class="form-group">
-    <label for="email-login">email:</label>
-    <input class="form-input" type="text" id="email-login" />
+    <form class="form login-form">
+      <div class="form-group">
+        <label for="email-login">email:</label>
+        <input class="form-input" type="text" id="email-login" />
+      </div>
+      <div class="form-group">
+        <label for="password-login">password:</label>
+        <input class="form-input" type="password" id="password-login" />
+      </div>
+      <div class="form-group">
+        <button class="btn btn-primary" type="submit">login</button>
+      </div>
+    </form>
   </div>
-  <div class="form-group">
-    <label for="password-login">password:</label>
-    <input class="form-input" type="password" id="password-login" />
-  </div>
-  <div class="form-group">
-    <button class="btn btn-primary" type="submit">login</button>
-  </div>
-</form>
+  <div class="col-md-6">
+    <h2>Signup</h2>
 
-<script src="/js/login.js"></script>
+    <form class="form signup-form">
+      <div class="form-group">
+        <label for="first-name-signup">first name:</label>
+        <input class="form-input" type="text" id="first-name-signup" />
+      </div>
+      <div class="form-group">
+        <label for="last-name-signup">last name:</label>
+        <input class="form-input" type="text" id="last-name-signup" />
+      </div>
+      <div class="form-group">
+        <label for="specialty-signup">specialty:</label>
+        <input class="form-input" type="text" id="specialty-signup" />
+      </div>
+      <div class="form-group">
+        <label for="phone-number-signup">phone number:</label>
+        <input class="form-input" type="text" id="phone-number-signup" />
+      </div>
+      <div class="form-group">
+        <label for="address-signup">address:</label>
+        <input class="form-input" type="text" id="address-signup" />
+      </div>
+      <div class="form-group">
+        <label for="email-signup">email:</label>
+        <input class="form-input" type="text" id="email-signup" />
+      </div>
+      <div class="form-group">
+        <label for="password-signup">password:</label>
+        <input class="form-input" type="password" id="password-signup" />
+      </div>
+      <div class="form-group">
+        <button class="btn btn-primary" type="submit">signup</button>
+      </div>
+    </form>
+  </div>
+</div>
+
+<script src="./js/login.js"></script>
