--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,8 @@
+<div class="row">
+  <div class="col-auto">
+    <h2>Welcome, {{name}}!</h2>
+  </div>
+</div>
 <div>
   <h2>Create Appointment</h2>
   <input type="text" id="basicDate" placeholder="Please select Date Time" data-input>
