--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -13,6 +13,7 @@
       </div>
       <div class="form-group">
         <button class="btn btn-primary" type="submit">login</button>
+        {{!-- <button class="btn btn-primary" type="submit"><a onclick="submit()" href="./homepage.handlebars"><h4 >login</h4></a></button> --}}
       </div>
     </form>
   </div>
