--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -4,8 +4,16 @@
   <button id="confirmBtn" type="submit"class="btn btn-danger w-50 custom-b1">Confirm</button>
 </div>
 <h2>Week Number with Reset Date</h2>
-<div class=resetDate>
-  <input type="text" placeholder="Select Date.." data-input>
+<div class="resetDate">
+  {{!-- <input type="text" placeholder="Select Date.." data-input> --}}
+  <select id="dateSelect">
+    {{#each appointments}}
+    <option value ="{{id}}">
+      {{date}}
+    </option>
+    {{/each}}
+  </select>
   <button class="input-button" title="clear" data-clear>RESET</button>
 </div>
+{{!-- <script src="/js/homepage.js"></script> --}}
 
