--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,6 @@
+<nav>
+  <button id = "logout" >Logout</button> 
+</nav>
 <div>
   <h2>Create Appointment</h2>
   <input type="text" id="basicDate" placeholder="Please select Date Time" data-input>
@@ -13,7 +16,7 @@
     </option>
     {{/each}}
   </select>
-  <button class="input-button" title="clear" data-clear>RESET</button>
+  <button class="input-button" id ="resetBtn" title="clear" data-clear>RESET</button>
 </div>
-{{!-- <script src="/js/homepage.js"></script> --}}
+<script src="/js/logout.js"></script>
 
