this shit is so annoying

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,7 +20,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!--  Flatpickr  -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.2.3/flatpickr.js"></script>
-  <script src="/js/homepage.js"></script>
+  <script src="/public/js/homepage.js"></script>
 </body>
 
 </html>
