--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -19,4 +19,5 @@
   <button class="input-button" id ="resetBtn" title="clear" data-clear>RESET</button>
 </div>
 <script src="/js/logout.js"></script>
+{{!-- <script src="/js/homepage.js"></script> --}}
 
